--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext {
         springBootVersion = '2.0.5.RELEASE'
-        springRestdocsVersion = '2.0.3.BUILD-SNAPSHOT'
+        springRestdocsVersion = '2.0.2.RELEASE'
+        snippetsDir = file('build/generated-snippets')
     }
     repositories {
         mavenCentral()
@@ -13,6 +14,10 @@ buildscript {
 
 plugins {
     id "org.asciidoctor.convert" version "1.5.3"
+}
+
+repositories {
+    mavenCentral()
 }
 
 apply plugin: 'java'
@@ -38,4 +43,20 @@ dependencies {
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+}
+
+test {
+    outputs.dir snippetsDir
+}
+
+asciidoctor {
+    inputs.dir snippetsDir
+    dependsOn test
+}
+
+bootJar {
+    dependsOn asciidoctor
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
 }
